--- a/zuperPortfolioPrace/5/products.css
+++ b/zuperPortfolioPrace/5/products.css
@@ -37,7 +37,6 @@
   .main__wrapper--white{
     position: relative;
     background-color: var(--white);
-    background-color: rgba(0, 0, 0, 0.1);
 
   
   }
@@ -92,6 +91,7 @@
   .product__a{
     position: relative;
     width: auto;
+    letter-spacing: .15em;
     align-self: flex-start;
     box-sizing: content-box;
     white-space: nowrap;
@@ -181,7 +181,7 @@
     right: -5%;
     width: 14%;
     height: 1px;
-    background-color:white;
+    background-color:var(--silver);
   }
   .product__a::before{
     content: "";
@@ -189,8 +189,8 @@
     top: 50%;
     right: -19%;
 
-    border-top: 1px white solid;
-    border-right: 1px white solid;
+    border-top: 1px #a7a691 solid;
+    border-right: 1px #a7a691 solid;
   
     transform:translate(50%,-25%) rotate(45deg);
     /* left: ; */
@@ -199,7 +199,7 @@
  
   }
   .product__img--first{
-    width: 75%;
+    width: 50%;
     height: var(--productImgHeight);
     /* height: 50%; */
     
@@ -246,8 +246,8 @@
     content: "";
     position: absolute;
     bottom: 0%;
-    transform: translate(0%,0%);
-    left: 0%;
+    transform: translate(-100%,0%);
+    left: 50%;
     width: calc(7%);
     height: 3px;
     background-color: var(--bege);
@@ -287,8 +287,11 @@
   }
   
   .product__a--second{
-    align-self: flex-start;
-    text-align:  center;
+    /* align-self: flex-start; */
+    /* text-align:  center; */
+    position: relative;
+    left: 50%;
+    transform: translateX(-100%);
 
   }
   .product__a--second::after{
@@ -302,14 +305,14 @@
     background-color:white;
   }
  
-  .product__a::before{
+  .product__a--second::before{
     content: "";
     position: absolute;
     top: 50%;
     right: -19%;
 
-    border-top: 1px white solid;
-    border-right: 1px white solid;
+    border-top: 1px var(--silver) solid;
+    border-right: 1px var(--silver) solid;
   
     transform:translate(50%,-25%) rotate(45deg);
     /* left: ; */
