--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -18,7 +18,7 @@ ul,ol{
   --white: white;
  --darkSilver: #464646;
 
-  /* --minSectionSize: 320px; */
+  --minSectionSize: 320px;
 
   --wrapperSize : 60%;
   --logoSize: 100px;
