--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -26,7 +26,7 @@ ul,ol{
   --wrapperSize : 60%;
   --logoSize: 100px;
   --productImgHeight : 50%;
-  --iframeWidth : 30%;
+  --videoSize: 25vh;
 }
 
 
