--- a/zuperPortfolioPrace/5/about.css
+++ b/zuperPortfolioPrace/5/about.css
@@ -1,9 +1,15 @@
 .main__wrapper--lightWood{
     height: 90vh;
+    background-image: url(img/wooder2.png);
+    background-size: cover;
+
+  box-shadow:inset 0 100vh 0 0 rgba(255, 255, 255, 0.85),inset 0 -80vh 0 0 rgba(255, 255, 255, 0.5) ;
+
+
     overflow: hidden;
     position: relative;
 }
 .about__img{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
