--- a/zuperPortfolioPrace/5/products3.css
+++ b/zuperPortfolioPrace/5/products3.css
@@ -46,7 +46,6 @@
     height: 90vh;
     min-height: calc(var(--minSectionSize) * .9);
     width: var(--wrapperSize);
-    flex-flow: 1;
    
     /* flex C */
     display: flex;
@@ -66,6 +65,8 @@
     width: 100%;
     margin-top: 5%;
 
+    /* height: 30%; */
+
     /* flex C */
     display: flex;
     flex-direction: column;
@@ -79,7 +80,7 @@
   .product__h2--thirt{
     position: relative;
     width: var(--wrapperSize);
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
 
     white-space: nowrap;
     text-transform: uppercase;
@@ -97,7 +98,7 @@
     content: "";
 
     position: absolute;
-    bottom: -2.5vh;
+    bottom: -5vh;
     left: 50%;
 
     transform: translate(-50%,-50%);
@@ -137,62 +138,91 @@
     position: relative;
   }
   
-
+  /*                         all VIDEOS wrapper */
   /* iframes products */
   .product__iframes{
     /* height: 50%; */
     margin-bottom: 5%;
     width: 100%;
+    color: var(--darkSilver);
+    letter-spacing: .05em;
 
-  /* flex C */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+    /* flex C */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
       /* overflow: hidden; */
 
   }
+  /*                            VIDEOS */
   .video__wrapper{
     text-align: center;
-    
+    /* flex C */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .product__iframe{
     position: relative;
     z-index: 1;
-  border-radius: 50%;
+    border: 1px solid black;
+    border-radius: 50%;
 
-  background-color: #000;
+    background-color: #000;
+    box-shadow:inset 100vw 0 0 0 rgba(0, 0, 0, .88);
 
-  /* height: 100%; */
-  /* width: var(--iframeWidth);  */
-  width: var(--videoSize); 
-  height: var(--videoSize);
 
-  overflow: hidden;
+    /* height: 100%; */
+    /* width: var(--iframeWidth);  */
+    width: var(--videoSize); 
+    height: var(--videoSize);
+
+    overflow: hidden;
 
 
   }
   .product__iframe::after{
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%,-50%);
+   
+ 
+    background-image: radial-gradient(rgba(190, 166, 124,.88)0%,rgba(190, 166, 124,.88)30%,rgba(0,0,0,0.3)30%,rgba(0,0,0,1) 100%);
+  }
+  .product__iframe::before{
+    content: "";
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    width: 0;
+    height: 0;
+    z-index: 1;
+    border-top: 10px solid transparent;
+    border-left: 15px solid black;
+    border-bottom: 10px solid transparent;
+    border-radius: 5px;
 
+    
+    
   }
 
 .iframe{
   position: absolute;
-  left: 0;
-  top: 0;
-  transform: translate(0%,0%);
-  width: 100%; 
-  height: 100%;
-  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 250%; 
+  height: 250%;
+  /* border-radius: 50%; */
 
 }
-.iframe::after{
-content: "";
-position: absolute;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-z-index: 2;
-background-color: #fff;
+
+.product__label{
+  margin-top: 5%;
 }
