--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -14,6 +14,8 @@ ul,ol{
 :root{
   
   --bege : rgb(190, 166, 124);
+  /* --bege: #BEA67C; */
+  
   --silver: #a7a691;
   --white: white;
   /* --darkSilver: #464646; */
@@ -25,7 +27,7 @@ ul,ol{
   --wrapperSize : 60%;
 
   --productImgHeight : 60%;
-  --videoSize: 25vh;
+  --videoSize: 30vh;
 
   --doSectionSize: 80%;
 }
@@ -36,7 +38,7 @@ body{
   font-size: 26px;
   /* overflow: hidden; */
   font-family: "Anton";
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 
@@ -47,8 +49,6 @@ body{
   background-position: right top, left bottom;
   /* box-shadow: inset 0 0 0 80vw rgba(0, 0, 0, .88); */
   box-shadow:inset 100vw 0 0 0 rgba(0, 0, 0, .88), inset 35vw 0 5px 0 rgba(0, 0, 0, .15),inset -49.5vw 0 0 0 rgba(0, 0, 0, .15);
-
-
   
   background-size:50% 100%,50% 100%;
   background-repeat: no-repeat,no-repeat;
@@ -63,6 +63,7 @@ body{
 
 }
 .header::after{
+
   content: "";
   position: absolute;
   bottom: 0;
@@ -74,6 +75,20 @@ body{
   background-image: linear-gradient(90deg,rgba(255, 255, 255, .9) 70%, rgba(255, 255, 255, .35) 70%,rgba(255, 255, 255, .35)100%);
 
 }  
+.header::before{
+  content: "f";
+  position: absolute;
+  bottom: 3%;
+  left: calc((100% - var(--wrapperSize)) / 2);
+  transform: translate(0%,50%);
+
+  text-transform: uppercase;
+  font-size: 10em;
+  font-weight: 800;
+  font-family: "Arial";
+  color:rgba(190, 166, 124,.05);
+  z-index: 1;
+}
 
 
 
@@ -353,16 +368,17 @@ body{
 
 }
 .slide__button:hover{
-  background-color: #fff;
-  color: rgba(0, 0, 0, .8);
+  /* background-color: #fff; */
+  /* color: rgba(0, 0, 0, .8); */
+  background-color: var(--bege);
 
 }
-.slide__button:hover::after{
+/* .slide__button:hover::after{
   background-color: rgba(0, 0, 0, .8); 
 }
 .slide__button:hover::before{
   border-color: rgba(0, 0, 0, .8);
-}
+} */
 
 
 
