--- a/zuperPortfolioPrace/5/products.css
+++ b/zuperPortfolioPrace/5/products.css
@@ -14,6 +14,14 @@
 .img{
   width: 100%;
   height: 100%;
+  /* box-shadow: 2px 2px 5px 0 black;
+  border: 1px solid black; */
+
+  filter: grayscale(90%);
+  transition: .2s;
+}
+.img:hover{
+  filter: grayscale(0%);
 }
   
   
@@ -40,6 +48,7 @@
 
   
   }
+  
   
   /* main product article */
   .main__product{
@@ -71,6 +80,10 @@
     justify-content: center;
     align-items: stretch;
   }
+  .main__product:hover img{
+    filter: grayscale(0%);
+  }
+
   .product__h2{
     text-transform: uppercase;
     position: relative;
@@ -204,6 +217,23 @@
     /* height: 50%; */
     
   }
+ 
+  .product__img--first::before{
+    content:"BBQ";
+    position: absolute;
+    left: 100%;
+    top: 50%;
+
+    transform: translate(-50%,-50%);
+
+    color: rgba(255,255,255,.2);
+    /* background-color: rgba(0,0,0,.1); */
+
+    font-weight: 800;
+    font-size: 5em;
+
+    z-index: 2;
+  }
 
 
 
@@ -247,7 +277,7 @@
     position: absolute;
     bottom: 0%;
     transform: translate(-100%,0%);
-    left: 50%;
+    left:calc(50% - .1em);
     width: calc(7%);
     height: 3px;
     background-color: var(--bege);
@@ -302,7 +332,7 @@
     right: -5%;
     width: 14%;
     height: 1px;
-    background-color:white;
+    background-color:var(--silver);
   }
  
   .product__a--second::before{
@@ -311,30 +341,16 @@
     top: 50%;
     right: -19%;
 
-    border-top: 1px var(--silver) solid;
-    border-right: 1px var(--silver) solid;
+    border-top: 1px #a7a691 solid;
+    border-right: 1px #a7a691 solid;
   
-    transform:translate(50%,-25%) rotate(45deg);
+    transform:translate(45%,-50%) rotate(45deg);
     /* left: ; */
     width: 2px;
     height: 2px;
  
   }
-  .product__a--second::before{
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -19%;
-
-    border-top: 1px white solid;
-    border-right: 1px white solid;
   
-    transform:translate(0%,-50%) rotate(45deg);
-    /* left: ; */
-    width: 2px;
-    height: 2px;
- 
-  }
   .product__img--second{
     width: 50%;
     height: var(--productImgHeight);
@@ -342,5 +358,21 @@
     /* height: 90%; */
     /* height: 50%; */
     
+  }
+  .product__img--second::before{
+    content:"BOAT";
+    position: absolute;
+    left: 0%;
+    top: 50%;
+
+    transform: translate(-50%,-50%);
+
+    color: rgba(255,255,255,.2);
+    /* background-color: rgba(0,0,0,.1); */
+
+    font-weight: 800;
+    font-size: 5em;
+
+    z-index: 2;
   }
   
