--- a/zuperPortfolioPrace/5/products3.css
+++ b/zuperPortfolioPrace/5/products3.css
@@ -82,7 +82,6 @@
     width: var(--wrapperSize);
     margin-bottom: 10vh;
 
-    white-space: nowrap;
     text-transform: uppercase;
     font-size: 2.2em;
     
@@ -166,7 +165,6 @@
   .product__iframe{
     position: relative;
     z-index: 1;
-    border: 1px solid black;
     border-radius: 50%;
 
     background-color: #000;
@@ -192,7 +190,7 @@
     transform: translate(-50%,-50%);
    
  
-    background-image: radial-gradient(rgba(190, 166, 124,.88)0%,rgba(190, 166, 124,.88)30%,rgba(0,0,0,0.3)30%,rgba(0,0,0,1) 100%);
+    background-image: radial-gradient(rgba(190, 166, 124,.88)0%,rgba(190, 166, 124,.88)20%,rgba(0,0,0,0.2)20%,rgba(0,0,0,.8) 100%);
   }
   .product__iframe::before{
     content: "";
@@ -203,10 +201,10 @@
     width: 0;
     height: 0;
     z-index: 1;
-    border-top: 10px solid transparent;
-    border-left: 15px solid black;
-    border-bottom: 10px solid transparent;
-    border-radius: 5px;
+    border-top: 8px solid transparent;
+    border-left: 12px solid black;
+    border-bottom: 8px solid transparent;
+    border-radius: 3px;
 
     
     
