--- a/zuperPortfolioPrace/5/weDo.css
+++ b/zuperPortfolioPrace/5/weDo.css
@@ -13,6 +13,8 @@
     background-size: cover;
     box-shadow:inset 100vw 0 0 0 rgba(0, 0, 0, .8);
     
+    font-family: 'Anton', sans-serif;
+
     height: 90vh;
     min-height: calc(var(--minSectionSize) * .9);
 
@@ -56,7 +58,7 @@
   font-size: 2em;
   color: var(--bege);
 
-  margin-bottom: 5%;
+  margin-bottom: 3vh;
   /* width: 100%; */
 }
 .do__h2::before{
@@ -76,7 +78,7 @@
   color: white;
   font-weight: 200;
 
-  margin-bottom: 5%;
+  margin-bottom: 3vh;
 
 }
  .do__p::before{
@@ -117,7 +119,7 @@
   transform: translate(-50%,-50%);
   width: 15px;
   height: 15px;
-  border: 2px  black solid;
+  border: 2px  white solid;
   border-radius: 50%;
 }
 .do__button::after{
@@ -125,15 +127,16 @@
   position: absolute;
   top: 50%;
   left: 13%;
-  transform: translate(-50%,-50%);
+  transform: translate(-40%,-50%);
   border-top: 5px solid transparent;
-  border-left: 5px solid black;
+  border-left: 7px solid white;
   border-bottom: 5px solid transparent;
 
 }
 .do__button:hover{
-  background-color: #fff;
-  color: rgba(0, 0, 0, .8);
+  /* color: rgba(255, 255, 255,.5); */
+  /* color: rgba(0, 0, 0, .8); */
+  background-color: black;
 
 }
 
