--- a/zuperPortfolioPrace/website portfolio/css/start.css
+++ b/zuperPortfolioPrace/website portfolio/css/start.css
@@ -1,5 +1,7 @@
 :root{
     --sectionMinHeight: 320px;
+    --wrapperWidth: 90%;
+    --navWidth: 50%;
 
 }
 *{
@@ -7,6 +9,16 @@
     margin: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+    color: #fff;
+}
+.img{
+    width: 100%;
+    height: 100%;
+}
 body{
-    background-color: #fff;   
+    background-color: #fff;
+    font-family: Arial, Helvetica, sans-serif;   
+
 }
