--- a/zuperPortfolioPrace/website portfolio/css/header.css
+++ b/zuperPortfolioPrace/website portfolio/css/header.css
@@ -1,5 +1,5 @@
 .header{
-    padding: relative;
+    position: relative;
     height: 100vh;
     background-image: url("../img/header.png");
     background-size: cover;
@@ -9,7 +9,7 @@
     /* justify-content: center; */
     align-items: center;
     overflow: hidden;
-
+ 
 
 }
 .header::after{
@@ -26,6 +26,7 @@
 }
 
 .nav{
+    position: relative;
     width: var(--wrapperWidth);
     height: 15%;
     /* flex C */
@@ -33,12 +34,45 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
+
+
 }
 
 .logo{
     position: absolute;
-    top:0;
+    top:50%;
+    transform: translateY(-50%);
     left:0;
+    width: 20px;
+    height: 50px;
+}
+.logo::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 105%;
+    height: 75%;
+
+    border-top: 2px solid white;
+    border-right: 2px solid white;
+    transform: translate(2px,-2px);
+
+}
+.logo::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 105%;
+    height: 75%;
+
+    border-bottom: 2px solid white;
+    border-left: 2px solid white;
+    transform: translate(-2px,2px);
+
 }
 
 .nav__list{
@@ -52,8 +86,8 @@
 }
 .nav__link{
     list-style: none;
-    font-size: 1.1em;
-    font-weight: 600;
+    font-size: 1.3em;
+    font-weight: 400;
 
 }
 /* } <header class="header">
@@ -96,13 +130,13 @@
         flex-direction: column;
         /* background-color: #fff; */
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
         
     }
     .header__img{
         display: block;
         position: relative;
-        width: 50%;
+        width: 40%;
         height: auto;
         filter: grayscale(66%);
     }
@@ -137,11 +171,14 @@
 
     .header__h1{
         font-size: 3em;
+        letter-spacing: .05em;
         color: white;
         font-weight: 600;
 
         white-space: nowrap;
         text-transform: uppercase;
+
+        margin-top: 30px;
     }
     .header__specialization{
         font-size: 1.7em;
@@ -149,15 +186,22 @@
         font-weight: 400;
 
         white-space: nowrap;
+
+        margin-top: 10px;
+
     }
     .header__button{
-        width: 100%;
+        width: 90%;
         padding: 5%;
         background-color: transparent;
-        border: white solid 1px;
-        font-size: 1.7em;
+        border: white solid 2px;
+        font-size: 1.2em;
         color: white;
         font-weight: 400;
+        text-transform: uppercase;
 
         white-space: nowrap;
+
+        margin-top: 20px;
+
     }
